P0: LGJ must use JDK 28, Valhalla and Panama — operator ruling
Records the mandate as canon in CLAUDE.md and strikes, in place, the
superseded 'production targets a GA JDK, no preview flags' decision in the
toolchain knowledge doc. That framing turned a release constraint into an
architectural virtue and licensed the false claim that production does not
depend on Valhalla: Panama carries the verb, Valhalla carries the noun,
lance-graph owns the reality.

Unaffected and stated so it is not over-applied: E4 (no Vector API in
src/main), the classfile-poisoning rule, and every mask-native invariant.

Mandated, not implemented: no JDK 28 in this container and jdk.java.net is
proxy-blocked, so the migration is filed with its steps and falsifier as
ISS-LGJ-TOOLCHAIN-MUST-BE-JDK28-VALHALLA-PANAMA.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01HScwwezRdMxFfTs3WLG19d